Fix loader getting out of place

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -1,3 +1,7 @@
+.qg-wrapper {
+    position: relative;
+}
+
 .qg-header {
     display: flex;
 }
